IF(LIBNFC_VERBOSE_OUTPUT)
  ADD_DEFINITIONS("-DDEBUG")
ENDIF(LIBNFC_VERBOSE_OUTPUT)

IF(LIBNFC_DISABLE_SERIAL_AUTOPROBE)
  ADD_DEFINITIONS("-DDISABLE_SERIAL_AUTOPROBE")
ENDIF(LIBNFC_DISABLE_SERIAL_AUTOPROBE)

IF(LIBNFC_LANG_C99 AND NOT MSVC)
  SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -std=c99")
ENDIF(LIBNFC_LANG_C99 AND NOT MSVC)

IF(MSVC)
  # We should fix the code, not hide warning!
  ADD_DEFINITIONS("-D_CRT_SECURE_NO_WARNINGS")
  # Include the stdint headers, because MSVC does not have them
  INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/../win32/stdint)
ENDIF(MSVC)

INCLUDE_DIRECTORIES(${LIBUSB_INCLUDE_DIRS} ${PCSC_INCLUDE_DIRS})

ADD_SUBDIRECTORY(lib)
ADD_SUBDIRECTORY(examples)
